--- a/posts.html
+++ b/posts.html
@@ -3,6 +3,32 @@ permalink: posts.html
 layout: null
 ---
 <style type="text/css" media="screen">
+body {
+  font: 16px/1.485 simsun, simkai, kaiti, simhei, serif;
+  letter-spacing: -0.035em;
+}
+
+a, a:hover, a:active, a:visited {
+  color: blue;
+}
+
+rt {
+  font-family: helvetica, arial, sans-serif;
+  font-style: normal;
+  letter-spacing: 0;
+}
+
+#post h3 {
+  font-size: 180%;
+}
+
+button {
+  color: blue;
+  background-color: transparent;
+  border: 0;
+  border-bottom: 1px dotted;
+  cursor: pointer;
+}
 </style>
 <script>
 window.request = function(options, onRequest, onSuccess) {
@@ -21,7 +47,10 @@ window.request = function(options, onRequest, onSuccess) {
 };
 </script>
 
-<div><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 60%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
+<div style="background-color: white; position: fixed; right: 0; bottom: 0; z-index: 9999;">&copy;<a href="/"><strong>布袋豆腐</strong></a><sup style="color: black; border: 0;">（2023-2024）</sup></div>
+
+<div id="container">
+<div style="float: right; width: 30%; margin: 50px;"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 60%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
 
 <div id="post">
   {% for post in site.posts %}
@@ -38,6 +67,7 @@ window.request = function(options, onRequest, onSuccess) {
     <div id="loading" style="display: none;">加载中...</div>
   </div>
 {% endunless %}
+</div>
 <script>
 ;(function() {
   var btnPrev = document.getElementById('btn-prev');
