--- a/inn.html
+++ b/inn.html
@@ -44,7 +44,7 @@ sub {
 
 .rooms, .about {
   width: 100%;
-  margin: 45px auto 25px;
+  margin: 40px auto 25px;
 }
 
 .rules {
@@ -158,7 +158,7 @@ window.mobileCheck = function() {
 };
 </script>
 
-<div style="margin-bottom: 25px; background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><sup style="color: black; border: 0;">（2023-2024）</sup></div><div style="font-size: 85%; color: white; background-color: red; padding: 2px 10px;">家庭民宿<em>（单间出租）</em></div></div>
+<div style="margin-bottom: 25px; background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><sup style="color: black; border: 0;">（2023-2024）</sup></div><div style="font-size: 85%; color: white; background-color: red; padding: 0 10px;">家庭民宿<em>（单间出租）</em></div></div>
 <pre class="rooms">
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
