--- a/inn.html
+++ b/inn.html
@@ -71,6 +71,21 @@ sub {
   display: inline;
 }
 
+.bottomborder2px-red {
+  display: inline-block;
+  text-decoration: underline 2px red;
+}
+
+.bottomborder4px-green {
+  color: green;
+  text-decoration: underline 4px lightgreen;
+}
+
+.bottomborder4px-red {
+  color: red;
+  text-decoration: underline 4px red;
+}
+
 .on-mobile {
   font-size: 45px;
 }
@@ -87,6 +102,18 @@ sub {
 
 .on-mobile .rooms {
   margin-top: 110px;
+}
+
+.on-mobile .bottomborder2px-red {
+  border-bottom: 2px solid red;
+}
+
+.on-mobile .bottomborder4px-green {
+  border-bottom: 4px solid lightgreen;
+}
+
+.on-mobile .bottomborder4px-red {
+  border-bottom: 4px solid red;
 }
 
 @media only screen and (max-width: 800px) {
@@ -111,8 +138,9 @@ window.mobileCheck = function() {
 };
 </script>
 
-<div style="margin-bottom: 25px; background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><sup style="color: black; border: 0;">（2023-2024）</sup></div><div style="font-size: 85%; color: white; background-color: red; padding: 0 10px;">家庭民宿<em>（单间出租）</em></div></div>
+<div style="margin-bottom: 25px; background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><sup style="color: black; border: 0;">（2023-2024）</sup></div></div>
 <pre class="rooms">
+<b>出租房</b>
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
 ├ <b>院内</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
@@ -304,23 +332,23 @@ window.mobileCheck = function() {
 此外，我们希望租给想长期居住的人，短租的至少有计划租一个月。以下是我们制定的一些原则和要求。</div>
 
 几条原则：
-一、<span style="text-decoration: underline solid 2px red;">统一的月租金</span>。
+一、<span class="bottomborder2px-red">统一的月租金</span>。
    ├ 短租、长租；        
    ├ 淡季、旺季；
    └ 月付、季付、半年付、年付。
-二、<span style="text-decoration: underline solid 2px red;">租金包基本的水电使用费</span>。
-三、<span style="text-decoration: underline solid 2px red;">无租房押金</span>。
-四、<span style="text-decoration: underline solid 2px red;">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
-五、<span style="text-decoration: underline solid 2px red;">按天算租金</span>；意外情况退租，多余租金全额退还。
-六、<span style="text-decoration: underline solid 2px red;">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
-七、<span style="text-decoration: underline solid 1px red;">也没有钥匙押金</span>。
+二、<span class="bottomborder2px-red">租金包基本的水电使用费</span>。
+三、<span class="bottomborder2px-red">无租房押金</span>。
+四、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
+五、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
+六、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
+七、<span class="bottomborder2px-red">也没有钥匙押金</span>。
 八、如居住期彼此间产生矛盾。
    ├ 1、按照以上原则公事公办。
    └ 2、超出以上原则的，依着诚心和公平来协商处理。
 <div style="white-space: pre-wrap;">
 2点要求：
 A、不能养宠物。
-B、我们推崇健康的素食生活，我本人也是长期素食者。因此<span style="color: red; text-decoration: underline solid red 4px;"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span style="color: lightgreen; font-weight: bold; text-decoration: underline solid lightgreen 4px;">牛奶、羊奶等，及相关奶制品允许</span>。
+B、我们推崇健康的素食生活，我本人也是长期素食者。因此<span class="bottomborder4px-red"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span class="bottomborder4px-green">牛奶、羊奶等，及相关奶制品允许</span>。
 
 <em>备注：我们会不定期地，免费提供一些自制的豆制品给大家。比如：豆浆，豆腐、豆干、油豆腐等。</em>
 </div>
