--- a/inn.html
+++ b/inn.html
@@ -350,7 +350,7 @@ window.mobileCheck = function() {
 A、不能养宠物。
 B、我们推崇健康的素食生活，我本人也是长期素食者。因此<span class="bottomborder4px-red"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span class="bottomborder4px-green">牛奶、羊奶等，及相关奶制品允许</span>。
 
-<em>备注：我们会不定期地，免费提供一些自制的豆制品给大家。比如：豆浆，豆腐、豆干、油豆腐等。</em>
+<em>备注：我们有时候也会免费提供一些自制的豆制品给大家。比如：豆浆，豆腐、豆干、油豆腐等。</em>
 </div>
 </pre>
 <script>
@@ -368,7 +368,7 @@ B、我们推崇健康的素食生活，我本人也是长期素食者。因此<
   })();
 </script>
   
-<div style="margin: 35px; font-size: 110%; font-weight: bold; text-align: center;"><span style="text-decoration: underline; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">→已了解情况，有意加入我们；请点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
+<div style="margin: 35px; font-size: 110%; font-weight: bold; text-align: center;"><mark>→已了解情况，有意加入我们的请联系电话：19542586219，或微信：同电话号。</mark></div>
 <div style="font-size: 125%; font-weight: bold; text-align: center; margin: 20px 0;"><span style="color: white; background-color: lightgreen;">节俭、朴实、薄欲、健康、积极<sup class="supa"><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
 
 <div id="gallery">
