--- a/inn.html
+++ b/inn.html
@@ -380,6 +380,7 @@ B、我们推崇健康的素食生活，我本人也是长期素食者。因此<
 <style>
   .gallery-open-btn {
     color: blue;
+    font-size: 75%;
     margin-left: 2px;
     border-bottom: 1px dotted;
     position: relative;
