--- a/posts.html
+++ b/posts.html
@@ -20,18 +20,19 @@ rt {
 
 #container {
   max-width: 650px;
+  margin-top: 45px;
 }
 
 #post h3 {
-  font-size: 180%;
+  font-size: 125%;
 }
 
 button {
   color: blue;
-  font-size: 115%;
+  font-size: 80%;
   background-color: transparent;
   border: 0;
-  border-bottom: 2px dotted;
+  border-bottom: 1px dotted;
   cursor: pointer;
 }
 </style>
@@ -52,10 +53,10 @@ window.request = function(options, onRequest, onSuccess) {
 };
 </script>
 
-<div style="background-color: white; position: fixed; right: 0; bottom: 0; z-index: 9999;">&copy;<a href="/"><strong>布袋豆腐</strong></a><sup style="color: black; border: 0;">（2023-2024）</sup></div>
+<div style="background-color: white; position: fixed; top: 0; left: 0; z-index: 9999;">&copy;<a href="/"><strong>布袋豆腐</strong></a><sup style="color: black; border: 0;">（2023-2024）</sup></div>
 
 <div id="container">
-<div style="font-size: 80%; text-align: center; float: right; width: 30%; margin: 20px;"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
+<div style="font-size: 80%; text-align: center; float: right; width: 30%; margin: 55px 20px 20px;"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
 
 <div id="post">
   {% for post in site.posts %}
@@ -69,7 +70,7 @@ window.request = function(options, onRequest, onSuccess) {
   <div style="text-align: center;">
     <button id="btn-prev" type="button" title="上一条">◀</button>
     <button id="btn-next" type="button" title="下一条">▶</button>
-    <div id="loading" style="display: none;">加载中...</div>
+    <div id="loading" style="color: white; font-size: 75%; background-color: black; display: none;">加载中...</div>
   </div>
 {% endunless %}
 </div>
