--- a/inn.html
+++ b/inn.html
@@ -183,7 +183,7 @@ window.mobileCheck = function() {
 │   │ ├ 租金
 │   │ │ └ 含基本水电的使用。
 │   │ └ 家具
-│   │   ├ 原木壁挂置物架（4钩）<sup>无漆</sup>
+│   │   ├ 原木壁挂置物架（4钩）
 │   │   ├ 原木单人床<sup>无漆</sup>
 │   │   ├ 原木床头柜<sup>无漆</sup>
 │   │   └ 原木书桌<sup>无漆</sup>
@@ -195,7 +195,7 @@ window.mobileCheck = function() {
 │     ├ 租金
 │     │ └ 含基本水电的使用。
 │     └ 家具
-│       ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+│       ├ 原木壁挂置物架（6钩）
 │       ├ 原木衣架<sup>无漆</sup>
 │       ├ 原木双人床<sup>无漆</sup>
 │       ├ 原木床头柜<sup>无漆</sup>
@@ -232,7 +232,7 @@ window.mobileCheck = function() {
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
-    │   ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+    │   ├ 原木壁挂置物架（6钩）
     │   ├ 原木衣架<sup>无漆</sup>
     │   ├ 原木双人床<sup>无漆</sup>
     │   ├ 原木床头柜<sup>无漆</sup>
@@ -245,7 +245,7 @@ window.mobileCheck = function() {
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
-    │   ├ 原木壁挂置物架（4钩）<sup>无漆</sup>
+    │   ├ 原木壁挂置物架（4钩）
     │   ├ 原木单人床<sup>无漆</sup>
     │   ├ 原木床头柜<sup>无漆</sup>
     │   └ 原木书桌<sup>无漆</sup>
@@ -257,7 +257,7 @@ window.mobileCheck = function() {
       ├ 租金
       │ └ 含基本水电的使用。
       └ 家具
-        ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+        ├ 原木壁挂置物架（6钩）
         ├ 原木衣架<sup>无漆</sup>
         ├ 原木双人床<sup>无漆</sup>
         └ 原木书桌<sup>无漆</sup>
