--- a/inn.html
+++ b/inn.html
@@ -34,16 +34,20 @@ abbr {
 }
 
 sup, sub {
-  color: white;
-  font-size: 55%;
+  font-size: 70%;
   border-bottom: 1px dotted;
   box-sizing: border-box;
-  background-color: black;
   position: relative;
 }
 
 sub {
-  bottom: 2px;
+  vertical-align: bottom;
+  bottom: -2px;
+}
+
+sup {
+  vertical-align: top;
+  top: -2px;
 }
 
 .color-default {
