--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
     var style = document.createElement('style');
     style.type = 'text/css';
     
-    style.innerText = '@keyframes move { 0% { right:' + (-offsetRight) + '; } 100% { right: 0; }}';
+    style.innerText = '@keyframes move { 0% { right:' + offsetRight + '; } 100% { right: 0; }}';
     scroller.parentNode.appendChild(style);
   })();
   </script>
