--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@ layout: null
 ---
 <style type="text/css" media="screen">
 body {
-  font: 1em/1.675 simsun, simkai, kaiti, simhei, serif;
+  font: 1em/1.805 kaiti, simsun, simkai, kaiti, simhei, serif;
   letter-spacing: -0.035em;
 }
 
@@ -19,17 +19,18 @@ rt {
 }
 
 #container {
-  max-width: 650px;
-  margin-top: 45px;
+  max-width:500px;
+  font-size: .875em;
 }
 
 #post h3 {
-  font-size: 125%;
+  font-size: 115%;
 }
 
 button {
+  display: inline-block;
   color: blue;
-  font-size: 80%;
+  font-size: .7em;
   background-color: transparent;
   border: 0;
   border-bottom: 1px dotted;
@@ -53,10 +54,8 @@ window.request = function(options, onRequest, onSuccess) {
 };
 </script>
 
-<div style="background-color: white; position: fixed; top: 0; left: 0; z-index: 9999;">&copy;<a href="/"><strong>布袋豆腐</strong></a><sup style="color: black; border: 0;">（2023-2024）</sup></div>
-
 <div id="container">
-<div style="font-size: 80%; text-align: center; float: right; width: 30%; margin: 55px 20px 20px;"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
+<div style="font-size: 80%; text-align: center; width: 140px;"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><br><span>布袋和尚像，大英博物馆藏。</span></div>
 
 <div id="post">
   {% for post in site.posts %}
@@ -68,9 +67,7 @@ window.request = function(options, onRequest, onSuccess) {
   
 {% unless site.posts.size == 1 %}
   <div style="text-align: center;">
-    <button id="btn-prev" type="button" title="上一条">◀</button>
-    <button id="btn-next" type="button" title="下一条">▶</button>
-    <div id="loading" style="color: white; font-size: 75%; background-color: black; display: none;">加载中...</div>
+    <button id="btn-prev" type="button" title="上一条">◀</button><button id="btn-next" type="button" title="下一条">▶</button><div id="loading" style="color: white; font-size: 75%; background-color: black; display: none;">加载中...</div>
   </div>
 {% endunless %}
 </div>
