更新民宿文字

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: default
 })();
 </script>
 
-<div id="footer"><a href="/inn.html" target="_blank">家庭民宿</a></div>
+<div id="footer"><a href="/inn.html" target="_blank">家庭民宿↗</a></div>
 <style>
 #footer {
   font-size: 65%;
