--- a/inn.html
+++ b/inn.html
@@ -89,8 +89,8 @@ pre div {
 }
 
 .bottomborder4px-green {
-  color: lightgreen;
-  text-decoration: underline 4px lightgreen;
+  color: green;
+  text-decoration: underline 4px green;
 }
 
 .bottomborder4px-red {
@@ -338,24 +338,24 @@ window.draggable = function(el) {
 <div style="white-space: pre-wrap;">
 <mark>我们采购的家具很多都是<strong>原木、无漆</strong>的，以健康、简朴、实用性为第一。</mark>
 
-此外，我们希望租给想长期居住的人，短租的至少有计划租一个月。以下是我们制定的一些原则和要求。</div>
+此外，我们希望租给想长期居住的人，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
 
-几条原则：
+几个规定：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
    ├ 短租、长租；        
    ├ 淡季、旺季；
    └ 月付、季付、半年付、年付。
 二、<span class="bottomborder2px-red">租金包基本的水电使用费</span>。
 三、<span class="bottomborder2px-red">无租房押金</span>。
-四、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
-五、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
-六、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
-七、<span class="bottomborder2px-red">也没有钥匙押金</span>。
+四、<span class="bottomborder2px-red">也没有钥匙押金</span>。
+五、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
+六、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
+七、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
 八、如居住期彼此间产生矛盾。
    ├ 1、按照以上原则公事公办。
    └ 2、超出以上原则的，依着诚心和公平来协商处理。
 <div style="white-space: pre-wrap;">
-2点要求：
+两点要求：
 A、不能养宠物。
 B、我们推崇健康的素食生活，我本人也是长期素食者。因此<span class="bottomborder4px-red"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span class="bottomborder4px-green">牛奶、羊奶等，及相关奶制品允许</span>。
 
@@ -378,7 +378,7 @@ B、我们推崇健康的素食生活，我本人也是长期素食者。因此<
 </script>
   
 <div style="margin: 20px 0; font-weight: bold; text-align: center;"><mark>→已了解情况，有意加入我们的请联系电话：19542586219，或微信：同电话号。</mark></div>
-<div style="font-weight: bold; text-align: center; margin: 20px 0;"><span style="color: white; background-color: lightgreen;">节俭、朴实、薄欲、健康、积极<sup><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
+<div style="font-weight: bold; text-align: center; margin: 20px 0;"><span style="color: white; background-color: green;">节俭、朴实、薄欲、健康、积极<sup><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
 
 <div id="gallery">
   <div id="gallery-loadingbar" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 85%; padding: 0 5px; width: 75px;"></div>
