--- a/inn.html
+++ b/inn.html
@@ -336,9 +336,9 @@ window.draggable = function(el) {
 </pre>
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<mark>我们采购的家具很多都是<strong>原木、无漆</strong>的，以健康、简朴、实用性为第一。</mark>
+<mark>由于成本的原因，所有房间我们只添置了最基本的家具；所采购的家具很多都是<strong>原木、无漆</strong>的，这样的习惯也适应健康、简朴、实用性的理念。剩下的空间，对于有计划长住的您，可以自由DIY，或者就保持基本的简朴原貌。</mark>
 
-此外，我们希望租给想长期居住的人，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
+此外，我们更希望租给想长期居住的<b>新大理人</b>，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
 
 几个规定：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
