--- a/buddha.html
+++ b/buddha.html
@@ -3,6 +3,11 @@ permalink: buddha.html
 layout: null
 ---
 <style type="text/css" media="screen">
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 body {
   font: 14px/1.805 simsun, simkai, kaiti, simhei, serif;
   letter-spacing: -0.035em;
@@ -35,8 +40,11 @@ button {
   cursor: pointer;
 }
 
-.on-mobile #container {
+.on-mobile {
   font-size: 35px;
+}
+
+.on-mobile #container {
   max-width: 100%;
 }
 
