--- a/inn.html
+++ b/inn.html
@@ -7,6 +7,11 @@ layout: null
   box-sizing: border-box;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 body {
   font-size: 14px;
 }
