--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
 </style>
 
 <div id="note">
-<span>同样的产品，在不同的经销商处价格可能不一致。</span>由于最初我们定价时没有考虑到给经销商预留合理的利润空间，出于他们自身的运营成本，价格可能会比我们的略高一些。
+<span>同样的产品，在不同的经销商处销售价格可能不一致。</span>由于最初我们定价时没有考虑到给经销商预留合理的利润空间，出于他们自身的运营成本，售价可能会比我们的略高一些。
 </div>
 <style>
 #note {
