--- a/inn.html
+++ b/inn.html
@@ -341,7 +341,7 @@ window.draggable = function(el) {
 </pre>
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<mark>由于成本的原因，所有房间我们只添置了最基本的家具；所采购的家具很多都是<strong>原木、无漆</strong>的，这样的习惯也适应健康、简朴、实用性的理念。剩下的空间，对于有计划长住的您，可以自由DIY，或者就保持基本的简朴原貌。</mark>
+<em>由于成本的原因，所有房间我们只添置了最基本的家具；所采购的家具很多都是<strong>原木、无漆</strong>的，这样的习惯也适应健康、简朴、实用性的理念。剩下的空间，对于有计划长住的您，可以自由DIY，或者就保持基本的简朴原貌。</em>
 
 此外，我们更希望租给想长期居住的<b>新大理人</b>，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
 
@@ -382,8 +382,8 @@ B、我们推崇健康的素食生活，我本人也是长期素食者。因此<
   })();
 </script>
   
-<div style="margin: 20px 0; font-weight: bold; text-align: center;"><mark>→已了解情况，有意加入我们的请联系电话：19542586219，或微信：同电话号。</mark></div>
-<div style="font-weight: bold; text-align: center; margin: 20px 0;"><span style="color: white; background-color: green;">节俭、朴实、薄欲、健康、积极<sup><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
+<div style="margin: 20px 0; font-weight: bold; text-align: center;">→有意加入我们的；请联系电话：19542586219，或微信：同电话号。</div>
+<div style="font-weight: bold; text-align: center; margin: 20px 0;"><span>节俭、朴实、薄欲、健康、积极<sup><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
 
 <div id="gallery">
   <div id="gallery-loadingbar" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 85%; padding: 0 5px; width: 75px;"></div>
