--- a/inn.html
+++ b/inn.html
@@ -154,7 +154,7 @@ window.draggable = function(el) {
 
 <div style="background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><span style="font-size: 85%;">（2023-2024）</span></div></div>
 <div style="margin-top: 40px;"><mark>该页面的部分信息还不完整，待更新。</mark></div>
-<pre class="rooms">
+<pre class="rooms" style="margin-top: 20px;">
 <b>家庭民宿出租</b>
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
