--- a/inn.html
+++ b/inn.html
@@ -158,7 +158,7 @@ window.draggable = function(el) {
 <b>家庭民宿出租</b>
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
-├ <b>院内</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
+├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">二楼</span><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
@@ -344,7 +344,7 @@ window.draggable = function(el) {
 <div style="white-space: pre-wrap;">
 <em>由于成本的原因，所有房间我们只添置了最基本的家具；所采购的家具很多都是<strong>原木、无漆</strong>的，这样的习惯也适应健康、简朴、实用性的理念。剩下的空间，对于有计划长住的您，可以自由DIY，或者就保持基本的简朴原貌。</em>
 
-此外，我们更希望租给想长期居住的<b>新大理人</b>，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
+此外，有计划长期居住的人优先，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
 
 几个规定：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
