--- a/buddha.html
+++ b/buddha.html
@@ -34,7 +34,7 @@ dfn {
 }
 
 .buddha {
-  width: 200px;
+  width: 170px;
 }
 
 button {
@@ -86,7 +86,7 @@ window.request = function(options, onRequest, onSuccess) {
 </script>
 
 <div id="container">
-<div class="buddha"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><span>布袋和尚像，大英博物馆藏。</span></div>
+<div class="buddha"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><span>布袋和尚像。</span></div>
 
 <div id="post">
   {% for post in site.posts %}
