--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ layout: default
 
 <div id="imagegallery">
   <div id="imagegallery-body">
+    <img src="/assets/img/tofu/gallery/buddha.jpg" alt="/assets/img/tofu/gallery/buddha.jpg">
+    <img src="/assets/img/tofu/gallery/00.jpg" alt="/assets/img/tofu/gallery/00.jpg">
     <img src="/assets/img/tofu/gallery/01.jpg" alt="/assets/img/tofu/gallery/01.jpg">
     <img src="/assets/img/tofu/gallery/02.jpg" alt="/assets/img/tofu/gallery/02.jpg">
     <img src="/assets/img/tofu/gallery/03.jpg" alt="/assets/img/tofu/gallery/03.jpg">
@@ -23,6 +25,7 @@ layout: default
     <img src="/assets/img/tofu/gallery/13.jpg" alt="/assets/img/tofu/gallery/13.jpg">
     <img src="/assets/img/tofu/gallery/14.jpg" alt="/assets/img/tofu/gallery/14.jpg">
     <img src="/assets/img/tofu/gallery/15.jpg" alt="/assets/img/tofu/gallery/15.jpg">
+    <img src="/assets/img/tofu/gallery/16.jpg" alt="/assets/img/tofu/gallery/16.jpg">
   </div>
   <style type="text/css" media="screen">
   #imagegallery {
