--- a/inn.html
+++ b/inn.html
@@ -1,6 +1,7 @@
 ---
 permalink: /inn.html
 layout: default
+title: "家庭民宿"
 ---
 <div style="background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><span style="font-size: 85%;">（2023-2024）</span></div></div>
 <div style="margin-top: 40px;"><mark>该页面的部分信息还不完整，待更新。</mark></div>
@@ -192,7 +193,7 @@ layout: default
 </pre>
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<em>由于成本的原因，所有房间我们只添置了最基本的家具；所采购的家具很多都是<strong>原木、无漆</strong>的，这样的习惯也适应健康、简朴、实用性的理念。剩下的空间，对于有计划长住的您，可以自由DIY，或者就保持基本的简朴原貌。</em>
+<em>所有房间我们只添置了最基本的家具，并且符合健康、简朴、实用性的理念；所采购的家具很多都是<strong>原木、无漆</strong>的。剩下的空间，可以自由DIY，或者保持基本的简朴原貌。</em>
 
 此外，有计划长期居住的人优先，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
 
@@ -238,17 +239,17 @@ B、我们推崇健康的素食生活，我本人也是长期素食者。因此<
 
 .bottomborder2px-red {
   display: inline-block;
-  text-decoration: underline 2px red;
+  border-bottom: 2px solid red;
 }
 
 .bottomborder4px-green {
   color: green;
-  text-decoration: underline 4px green;
+  border-bottom: 4px solid green;
 }
 
 .bottomborder4px-red {
   color: red;
-  text-decoration: underline 4px red;
+  border-bottom: 4px solid red;
 }
 
 body.on-mobile .rooms {
